[package]
name = "fillers"
version = "0.1.0"
authors = ["Martin Camacho <martin@mcamac.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.70"
js-sys = "0.3.47"
rustc-hash = "1.1.0"
serde = {version = "1.0.123", features = ["derive"] }
rand = "0.8.0"